tests/ui/const-generics/issues/issue-56445-1.min.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-56445-1.rs:9:26
   |
LL | struct Bug<'a, const S: &'a str>(PhantomData<&'a ()>);
   |                          ^^ the type must not depend on the parameter `'a`
   |
   = note: lifetime parameters may not be used in the type of const parameters

error: `&str` is forbidden as the type of a const generic parameter
  --> $DIR/issue-56445-1.rs:9:25
   |
LL | struct Bug<'a, const S: &'a str>(PhantomData<&'a ()>);
   |                         ^^^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(adt_const_params)]`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0770`.
